# voxel-game-bevy

./: Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: mereo.gltf  mereofp.gltf  slime.gltf  sword.glb
client/: Cargo.toml
client/assets/models/mobs/: slime.gltf
client/assets/models/player/: purple-sword.gltf
client/src/: main.rs
client/src/game/: mod.rs  plugin.rs
client/src/game/connection/: components.rs  plugin.rs  resources.rs  systems.rs
client/src/game/materials/: mob_materials.rs  mod.rs
client/src/game/mob/: plugin.rs  resources.rs  systems.rs
client/src/game/player/: components.rs  plugin.rs  resources.rs  systems.rs
client/src/game/ui/: mod.rs  plugin.rs  styles.rs  update.rs
client/src/game/ui/health/: mod.rs  plugin.rs
client/src/game/world/: components.rs  world.rs
client/src/main_menu/: plugin.rs
client/src/main_menu/settings/: layout.rs
client/src/main_menu/systems/: layout.rs
common/: Cargo.toml
common/src/player/: things.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs  setup.rs  systems.rs
src/game/: mod.rs  plugin.rs  resources.rs  systems.rs
src/game/connection/: plugin.rs
src/game/mob/: components.rs  mob.rs  mod.rs  plugin.rs  resources.rs  systems.rs
src/game/player/: components.rs  player.rs  plugin.rs  systems.rs
src/game/ui/: components.rs  mod.rs  plugin.rs  styles.rs  update.rs
src/game/ui/HealthBar/: layout.rs
src/game/ui/health/: health.rs  mod.rs
src/game/world/: components.rs  mod.rs  plugin.rs  world.rs
src/main_menu/: components.rs  mod.rs  plugin.rs  styles.rs
src/main_menu/option_menu/: layout.rs
src/main_menu/optionsMenu/: layout.rs
src/main_menu/settings/: layout.rs
src/main_menu/systems/: interactions.rs  layout.rs
src/menu/: mod.rs
