[package]
name = "voxel-dungeon-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = "0.18.3"
bevy_rapier3d = { version = "0.21.0", features = [
    "debug-render",
    "parallel",
    "simd-stable",
] }
big-brain = "0.17.0"
bevy_asset_loader = "0.16.0"

[profile.dev.package."*"]
opt-level = 3
