[workspace]
members = ["client", "server", "common"]
resolver = "2"

[workspace.dependencies]
bevy = "0.10.1"
bevy_renet = "0.0.7"
local-ip-address = "0.5.1"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true    #Change this to be per platform windows doesn't seem to like it
