[package]
name = "client"
version = "0.1.0"
edition = "2021"
default-run = "client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy_renet.workspace = true
local-ip-address.workspace = true
serde.workspace = true
bevy-inspector-egui = "0.18.3"
common = { path = "../common" }
big-brain = "0.17.0"
bevy_asset_loader = "0.16.0"
bincode = "1.3.1"
bevy_rapier3d = { version = "0.21.0", features = [
    "debug-render",
    "parallel",
    "simd-stable",
] }
