[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy_renet.workspace = true
local-ip-address.workspace = true
serde.workspace = true
bevy_rapier3d = { version = "0.21.0", features = [
    "debug-render",
    "parallel",
    "simd-stable",
] }
