[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
bevy = ["dep:bevy_ecs"]


[dependencies]

bevy.workspace = true
bevy_renet.workspace = true
local-ip-address.workspace = true
serde.workspace = true
common = { path = "../common" }
bincode = "1.3.1"
bevy_ecs = { version = "0.10.0", optional = true }
bevy_egui = "0.20.0"
renet_visualizer.workspace = true
